{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 170,
  "lineage": "1975e1ad-81fa-6be2-46f0-8a24b5c225a8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:618889059366:internet-gateway/igw-08ba90dea4824d503",
            "id": "igw-08ba90dea4824d503",
            "owner_id": "618889059366",
            "region": "us-west-2",
            "tags_all": {
              "Identifier": "DevOps Handguide Book",
              "ManagedBy": "Terraform",
              "Project": "pastel-notes"
            },
            "vpc_id": "vpc-0aae0452f8eef0eb9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:618889059366:loadbalancer/app/pastel-notes-alb/af349b3c6b6758aa",
            "arn_suffix": "app/pastel-notes-alb/af349b3c6b6758aa",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "pastel-notes-alb-1114138467.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:618889059366:loadbalancer/app/pastel-notes-alb/af349b3c6b6758aa",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "pastel-notes-alb",
            "preserve_host_header": false,
            "region": "us-west-2",
            "security_groups": [
              "sg-0e1d96e6e54d35670"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03e937b955a05c42a"
              },
              {
                "subnet_id": "subnet-0faaf5a9e38dca4d1"
              }
            ],
            "subnets": [
              "subnet-03e937b955a05c42a",
              "subnet-0faaf5a9e38dca4d1"
            ],
            "tags_all": {
              "Identifier": "DevOps Handguide Book",
              "ManagedBy": "Terraform",
              "Project": "pastel-notes"
            },
            "vpc_id": "vpc-0aae0452f8eef0eb9",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:618889059366:loadbalancer/app/pastel-notes-alb/af349b3c6b6758aa"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "prod_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:618889059366:listener/app/pastel-notes-alb/af349b3c6b6758aa/d8d9b158d073003b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:618889059366:targetgroup/pastel-notes-blue-tg/1d4171600a5fd0a8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:618889059366:listener/app/pastel-notes-alb/af349b3c6b6758aa/d8d9b158d073003b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:618889059366:loadbalancer/app/pastel-notes-alb/af349b3c6b6758aa",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-west-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Identifier": "DevOps Handguide Book",
              "ManagedBy": "Terraform",
              "Project": "pastel-notes"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:618889059366:listener/app/pastel-notes-alb/af349b3c6b6758aa/d8d9b158d073003b"
          },
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.blue",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "test_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:618889059366:listener/app/pastel-notes-alb/af349b3c6b6758aa/93fce17a9a2c6d22",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:618889059366:targetgroup/pastel-notes-green-tg/14b59e33a426c95e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:618889059366:listener/app/pastel-notes-alb/af349b3c6b6758aa/93fce17a9a2c6d22",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:618889059366:loadbalancer/app/pastel-notes-alb/af349b3c6b6758aa",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "region": "us-west-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Identifier": "DevOps Handguide Book",
              "ManagedBy": "Terraform",
              "Project": "pastel-notes"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:618889059366:listener/app/pastel-notes-alb/af349b3c6b6758aa/93fce17a9a2c6d22"
          },
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.green",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:618889059366:targetgroup/pastel-notes-blue-tg/1d4171600a5fd0a8",
            "arn_suffix": "targetgroup/pastel-notes-blue-tg/1d4171600a5fd0a8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:618889059366:targetgroup/pastel-notes-blue-tg/1d4171600a5fd0a8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "pastel-notes-blue-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-west-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Identifier": "DevOps Handguide Book",
              "ManagedBy": "Terraform",
              "Project": "pastel-notes"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0aae0452f8eef0eb9"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:618889059366:targetgroup/pastel-notes-blue-tg/1d4171600a5fd0a8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:618889059366:targetgroup/pastel-notes-green-tg/14b59e33a426c95e",
            "arn_suffix": "targetgroup/pastel-notes-green-tg/14b59e33a426c95e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:618889059366:targetgroup/pastel-notes-green-tg/14b59e33a426c95e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "pastel-notes-green-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-west-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Identifier": "DevOps Handguide Book",
              "ManagedBy": "Terraform",
              "Project": "pastel-notes"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0aae0452f8eef0eb9"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:618889059366:targetgroup/pastel-notes-green-tg/14b59e33a426c95e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08ba90dea4824d503",
            "id": "r-rtb-0a31f50111a888d9f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-0a31f50111a888d9f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "618889059366",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-0a31f50111a888d9f"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:618889059366:route-table/rtb-0a31f50111a888d9f",
            "id": "rtb-0a31f50111a888d9f",
            "owner_id": "618889059366",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [],
            "tags": null,
            "tags_all": {
              "Identifier": "DevOps Handguide Book",
              "ManagedBy": "Terraform",
              "Project": "pastel-notes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aae0452f8eef0eb9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "618889059366",
            "id": "rtb-0a31f50111a888d9f",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef4bbfc5a7211a50",
            "region": "us-west-2",
            "route_table_id": "rtb-0a31f50111a888d9f",
            "subnet_id": "subnet-03e937b955a05c42a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee2636250680837e",
            "region": "us-west-2",
            "route_table_id": "rtb-0a31f50111a888d9f",
            "subnet_id": "subnet-0faaf5a9e38dca4d1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:618889059366:security-group/sg-0e1d96e6e54d35670",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1d96e6e54d35670",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "pastel-notes-alb-sg",
            "name_prefix": "",
            "owner_id": "618889059366",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Identifier": "DevOps Handguide Book",
              "ManagedBy": "Terraform",
              "Project": "pastel-notes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aae0452f8eef0eb9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "618889059366",
            "id": "sg-0e1d96e6e54d35670",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:618889059366:security-group/sg-0cf58c4e20a8950a6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Access to EFS",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "id": "sg-0cf58c4e20a8950a6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e1d96e6e54d35670"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "pastel-notes-ecs-sg",
            "name_prefix": "",
            "owner_id": "618889059366",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Identifier": "DevOps Handguide Book",
              "ManagedBy": "Terraform",
              "Project": "pastel-notes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aae0452f8eef0eb9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "618889059366",
            "id": "sg-0cf58c4e20a8950a6",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:618889059366:security-group/sg-0e58d58c718da6f5e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e58d58c718da6f5e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cf58c4e20a8950a6"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "pastel-notes-efs-sg",
            "name_prefix": "",
            "owner_id": "618889059366",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Identifier": "DevOps Handguide Book",
              "ManagedBy": "Terraform",
              "Project": "pastel-notes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aae0452f8eef0eb9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "618889059366",
            "id": "sg-0e58d58c718da6f5e",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:618889059366:subnet/subnet-03e937b955a05c42a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e937b955a05c42a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "618889059366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "pastel-notes-public-0"
            },
            "tags_all": {
              "Identifier": "DevOps Handguide Book",
              "ManagedBy": "Terraform",
              "Name": "pastel-notes-public-0",
              "Project": "pastel-notes"
            },
            "vpc_id": "vpc-0aae0452f8eef0eb9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "618889059366",
            "id": "subnet-03e937b955a05c42a",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:618889059366:subnet/subnet-0faaf5a9e38dca4d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0faaf5a9e38dca4d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "618889059366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "pastel-notes-public-1"
            },
            "tags_all": {
              "Identifier": "DevOps Handguide Book",
              "ManagedBy": "Terraform",
              "Name": "pastel-notes-public-1",
              "Project": "pastel-notes"
            },
            "vpc_id": "vpc-0aae0452f8eef0eb9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "618889059366",
            "id": "subnet-0faaf5a9e38dca4d1",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:618889059366:vpc/vpc-0aae0452f8eef0eb9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03672ccc3c93a9f58",
            "default_route_table_id": "rtb-0de37f17495bc6158",
            "default_security_group_id": "sg-0926a255ae1707f62",
            "dhcp_options_id": "dopt-06ccd2e408bdeb73a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aae0452f8eef0eb9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0de37f17495bc6158",
            "owner_id": "618889059366",
            "region": "us-west-2",
            "tags": {
              "Name": "pastel-notes-vpc"
            },
            "tags_all": {
              "Identifier": "DevOps Handguide Book",
              "ManagedBy": "Terraform",
              "Name": "pastel-notes-vpc",
              "Project": "pastel-notes"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "618889059366",
            "id": "vpc-0aae0452f8eef0eb9",
            "region": "us-west-2"
          }
        }
      ]
    }
  ]
}